# ffmpeg-video-player

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
Modules/: FindFFMPEG.cmake  FindSDL.cmake  FindSDL2.cmake  README.md
player/: CMakeLists.txt  README.md  player-sdl.c  player-sdl2.c
tutorial01/: CMakeLists.txt  README.md  tutorial01-deprecated.c  tutorial01-original.c  tutorial01.c
tutorial01/References/: README.md
tutorial02/: CMakeLists.txt  README.md  tutorial02-deprecated.c  tutorial02-original.c  tutorial02.c
tutorial02/References/: README.md
tutorial02/References/create-window/: CMakeLists.txt  create_window.c
tutorial02/References/moving-rectangle/: CMakeLists.txt  moving_rectangle.c
tutorial02/References/render-present/: CMakeLists.txt  Makefile  render_present.c
tutorial03/: CMakeLists.txt  README.md  tutorial03-deprecated.c  tutorial03-original.c  tutorial03-resampled-deprecated.c  tutorial03-resampled.c
tutorial03/References/: README.md
tutorial04/: CMakeLists.txt  README.md  tutorial04-deprecated.c  tutorial04-original.c  tutorial04-resampled-deprecated.c  tutorial04-resampled.c
tutorial04/References/: README.md
tutorial05/: CMakeLists.txt  README.md  tutorial05-original.c  tutorial05.c
tutorial05/References/: README.md
tutorial06/: CMakeLists.txt  README.md  tutorial06-original.c  tutorial06.c
tutorial06/References/: README.md
tutorial07/: CMakeLists.txt  README.md  tutorial07-original.c  tutorial07.c
tutorial07/References/: README.md
